<resources>
    <string name="app_name">Quizzer</string>
    <string name="enter_your_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="img">img</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
</resources>