<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/quiz_app"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/welcome"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#363A43"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/enter_your_name"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#7A8089"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:id="@+id/et_name"
                    android:hint="@string/name"
                    android:textColorHint="#7A8089"
                    android:textColor="#363A43"
                    android:inputType="textCapWords"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#59D6E6"
                android:text="@string/start"
                android:textSize="18sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>